Update src/main/java/bio/terra/Main.java
Co-authored-by: Phil Shapiro <pshapiro@broadinstitute.org>